--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lsh"
+name = "cosine-lsh"
 version = "0.1.0"
 authors = ["Veniamin Stepanov <vics31@gmail.com>"]
 edition = "2018"
